@@ -114,6 +114,8 @@ void avcodec_register_all(void)
     REGISTER_DECODER (H264_VDPAU, h264_vdpau);
     REGISTER_ENCDEC  (HUFFYUV, huffyuv);
     REGISTER_DECODER (IDCIN, idcin);
+    REGISTER_DECODER (IFF_BYTERUN1, iff_byterun1);
+    REGISTER_DECODER (IFF_ILBM, iff_ilbm);
     REGISTER_DECODER (INDEO2, indeo2);
     REGISTER_DECODER (INDEO3, indeo3);
     REGISTER_DECODER (INTERPLAY_VIDEO, interplay_video);
